app/assets/stylesheets/layout.css.scss
@import 'variables';

body {
  font-family: $default_font;
}

// Modified CSS for Polymer elements

body /deep/ {

  * {
    font-family: $default_font;
  }

  paper-button {

    text-transform: lowercase;

    font-size: 14px;
    color: rgb(51, 85, 117);
    text-align: center;
    height: 35px;
    border: 2px solid rgb(51, 85, 117);
    border-radius: 5px;
    background-color: white;
    box-shadow: 0 2px 0 0 rgba(218, 218, 218, 0.1);

    &:hover {
      color: black;
      border-color: black;
    }

    &::shadow div {
      padding-top: 7px;
    }

    /deep/ paper-ripple {
      color: #8080ff;
    }

    &[disabled], &[disabled]:hover {
      background-color: white;
      border-color: silver;
    }

    &[dismissive] {
      background: grey;
    }

  }

  paper-input {

    /deep/ #underline {
      display: none;
    }

    /deep/ paper-input-decorator {
      padding-top:  0;
      margin-right: 12px;
    }

    /deep/ ::content input[is="core-input"]  {
      border:        solid 2px silver;
      border-radius: 4px;
      height:        32px;
      margin-top:    0;
      padding-left:  8px;
    }

  }

  section.boiler-plate {

    font-family: $default_font;
    padding: 10px 30px;

    h1 {
      font-size:   26px;
      font-weight: 700;
      line-height: 30px;
    }

    h1 + p {
      margin-top: 0;
    }

    .question {
      font-style: italic;
      padding-bottom: 20px;
    }

    .answer {
      p:first-child { margin-top: 0; }

      ul {
        font-family: $default_font;

        li {
          font-size: 0.9em;
          line-height: 1.3em;
        }
      }

    }
  }

}

